--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ a {
 .logo span {
     color: #2e2f42;
 }
-header-nav a {
+header-nav {
     font-weight: 500;
     color: #2e2f42;
     font-size: 16px;
@@ -32,7 +32,7 @@ header-nav a {
 }
 header-nav a:hover,
 header-nav a:focus {
-    outline: #404bbf;
+    color: #404bbf;
 }
 
 .address {
