--- a/style.css
+++ b/style.css
@@ -151,7 +151,10 @@ header-nav a:focus {
 
 }
 .footer-text {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
     line-height: 1.5;
+    font-size: 16px;
     color: #f4f4fd;
     letter-spacing: 0.02em;
 }
