--- a/css/style.css
+++ b/css/style.css
@@ -50,15 +50,17 @@ a {
     color: #404bbf;
 }
 
-.hero {
-    background-color: #2e2f42;
+.hero-title {
     font-size: 56px;
     line-height: 1.07;
     text-align: center;
     letter-spacing: 0.02em;
     color: #ffffff;
-
 }
+.hero {
+    background-color: #2e2f42;
+}
+
 .button {
     font-family: "Roboto", sans-serif;
     font-size: 16px;
@@ -94,7 +96,11 @@ a {
     background-color: #ffffff;
 }
 .team-item {
-    background-color: #ffffff;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
 }
 .team-subtitle {
     background-color: #ffffff;
@@ -118,6 +124,7 @@ a {
     letter-spacing: 0.02em;
     line-height: 1.11;
     color: #2e2f42;
+    text-transform: capitalize;
 }
 .portfolio-list {
     background-color: #ffffff;
@@ -151,7 +158,7 @@ a {
     color: #4d5ae5;
     text-transform: uppercase;
 }
-.footer-span {
+.span {
     color: #f4f4fd;
 
 }
