--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,19 @@ a {
     background-color: #404bbf;
     color: #ffffff;
 }
-
+.section-item-title {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+}
+.section-text {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
 
 .team {
     background-color: #f4f4fd;
@@ -102,7 +114,7 @@ a {
     letter-spacing: 0.02em;
     color: #2e2f42;
 }
-.team-subtitle {
+.team-item {
     background-color: #ffffff;
 }
 .team-text {
@@ -169,4 +181,7 @@ a {
     font-size: 16px;
     color: #f4f4fd;
     letter-spacing: 0.02em;
+}
+.footer-logo {
+    color: #f4f4fd;
 }
