--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ a {
     color: #4d5ae5;
     text-transform: uppercase;
 }
-.span {
+.logo-studio {
     color: #2e2f42;
 }
 .header-nav {
@@ -36,7 +36,7 @@ a {
 }
 
 .address {
-    font-size: 16px;
+    font-style: normal;
 }
 .adress-list {
     font-size: 16px;
@@ -56,9 +56,6 @@ a {
     text-align: center;
     letter-spacing: 0.02em;
     color: #ffffff;
-}
-.hero {
-    background-color: #2e2f42;
 }
 
 .button {
@@ -183,5 +180,5 @@ a {
     letter-spacing: 0.02em;
 }
 .footer-logo {
-    color: #f4f4fd;
+    color: #4d5ae5;
 }
