--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,7 @@ a {
     text-align: center;
     letter-spacing: 0.02em;
     color: #ffffff;
+    background-color: #2e2f42;
 }
 
 .button {
@@ -95,9 +96,9 @@ a {
 }
 .team-title {
     text-transform: capitalize;
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.11;
+    font-weight: 500;
+    font-size: 3620px;
+    line-height: 1.2;
     letter-spacing: 0.02em;
     text-align: center;
     color: #2e2f42;
