--- a/css/style.css
+++ b/css/style.css
@@ -103,8 +103,8 @@ a {
 .team-title {
     text-transform: capitalize;
     font-weight: 500;
-    font-size: 3620px;
-    line-height: 1.2;
+    font-size: 36px;
+    line-height: 1.11;
     letter-spacing: 0.02em;
     text-align: center;
     color: #2e2f42;
@@ -112,7 +112,7 @@ a {
 .team-list {
     background-color: #ffffff;
 }
-.team-item {
+.team-subtitle {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
