--- a/css/style.css
+++ b/css/style.css
@@ -49,13 +49,15 @@ a {
 }
 .adress-list {
     font-size: 16px;
+}
+.adress-item {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
 }
 
-.address-list:hover,
-.address-list:focus {
+.address-item:hover,
+.address-item:focus {
     color: #404bbf;
 }
 /*Section1*/
